# knowledge-base

./: .docs-meta.json  LICENSE  README.md  package.json  pnpm-lock.yaml
.claude/: settings.json
.github/workflows/: android.yml
docs/: asr-integration-guide.md  mcp-setup.md
docs/tasks/: _bilibili_comments.json  _scrape_bilibili.py  bilibili-feedback-tasks.md  mobile-migration-tasks.md  qq-group-feedback-tasks.md
prototypes/: home-redesign.html
src/: App.tsx  Router.tsx  main.tsx
src-tauri/: Cargo.toml  installer-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/kb-core/src/: lib.rs
src-tauri/mcp/: Cargo.toml  test-handshake.sh  test-write.sh
src-tauri/mcp/src/: main.rs
src-tauri/src/: lib.rs  state.rs  tray.rs
src-tauri/src/commands/: ai.rs  attachment.rs  data_dir.rs  export.rs  import.rs  mcp.rs  mod.rs  notes.rs  sync.rs  sync_v1.rs  system.rs  tasks.rs  template.rs
src-tauri/src/database/: ai.rs  folders.rs  links.rs  mcp_servers.rs  mod.rs  notes.rs  schema.rs  search.rs  sync_v1.rs  tags.rs  tasks.rs
src-tauri/src/models/: mod.rs
src/components/: AsrToggleController.tsx  ClipUrlModal.tsx  CreateNoteModal.tsx  FileTypeIcon.tsx  HomeSearchInput.tsx  ImportPreviewModal.tsx  NewNoteButton.tsx  NewTodoButton.tsx  TemplatePickerModal.tsx
src/hooks/: useContextMenu.ts  useIsMobile.ts
src/lib/: aiProviderPresets.ts  assetUrl.ts  configShare.ts  contextMenuGuard.ts  mobileTabRegistry.ts  noteCreator.tsx  treeIcons.ts
src/store/: asr.ts  index.ts
src/styles/: global.css
src/types/: index.ts
(+116 files in other folders)
