[package]
name = "kb-mcp"
version = "0.1.0"
description = "Knowledge Base MCP Server - 把本地知识库以 MCP 协议暴露给 Claude Desktop / Cursor / Cherry Studio 等 LLM 客户端"
authors = ["抓蛙师"]
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "kb-mcp"
path = "src/main.rs"

[dependencies]
# rmcp: MCP 官方 Rust SDK（async/tokio），1.x 已稳定（2026-03 起 GA）
# - server: 服务端能力（包含 ServiceExt trait）
# - transport-io: stdio 传输（Claude Desktop / Cursor / Cherry Studio 等本地客户端通用）
# - macros: #[tool] / #[tool_router] 减少样板
# - schemars: re-export schemars，工具入参 struct 用它派生 JsonSchema
rmcp = { version = "1.5", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
# rusqlite bundled：自带 SQLite，跨平台无需系统装 sqlite3；版本与主应用对齐
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 错误处理：sidecar 是顶层应用，用 anyhow 比 thiserror 更省事
anyhow = "1"
# 命令行参数解析：传 --db-path 等
clap = { version = "4", features = ["derive", "env"] }
# write 工具：复刻主应用 services/hash.rs 的 SHA-256 用作 content_hash 字段（v22 引入）
sha2 = "0.10"

# ─── 体积优化：sidecar 走和主应用一致的 release profile ───
# 注意：profile 必须定义在 workspace 根（src-tauri/Cargo.toml），子 crate 自动继承
